[tool.poetry]
name = "bundle_basic"
version = "0.1.0"
description = "Set of basic utilities to assist on simple Python projects"
authors = ["Xavier Arnaus <xavi@arnaus.net>"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"