[tool.poetry]
name = "bundle_debug"
version = "0.1.0"
description = "Set of debugging utilities to assist on simple Python projects"
authors = ["Xavier Arnaus <xavi@arnaus.net>"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"